# dmmagicenum

./: .travis.yml  CMakeLists.txt  README.md  build.bat
include/: dmmagicenum.h  dmmagicenum_config.h.in
src/dmmagicenum_module/: dmmagicenum_module.cpp  dmmagicenum_module.h
test/dmmagicenumexample/: example.cpp
test/dmmagicenumtest/: dmmagicenumtest.cpp  test.cpp
