cmake_minimum_required(VERSION 3.2)

PROJECT(dmmagicenum)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMMAGICENUM_VERSION_MAJOR "1")
SET(DMMAGICENUM_VERSION_MINOR "0")
SET(DMMAGICENUM_VERSION_PATCH "1")
SET(DMMAGICENUM_VERSION "${DMMAGICENUM_VERSION_MAJOR}.${DMMAGICENUM_VERSION_MINOR}.${DMMAGICENUM_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMMAGICENUM_VERSION}")

OPTION(USE_DMMAGICENUM "use dmmagicenum" OFF)

ModuleImportAll("thirdparty")
ExeImport("test" "")
